userConfigToDenyUpdateForRoleUserAndStockChangeWhenPurchaseConfirmed[21/06/2024]