@@ -1,6 +1,7 @@
 package com.appli.clcapi.user.serviceImple;
 
 import com.appli.clcapi.common.constants.UserConstants;
+import com.appli.clcapi.common.enums.Roles;
 import com.appli.clcapi.common.response.NonPaginatedResponse;
 import com.appli.clcapi.user.dto.GetUserReqDto;
 import com.appli.clcapi.user.dto.UserDto;
@@ -11,11 +12,7 @@ import com.appli.clcapi.util.CurrentUserService;
 import lombok.RequiredArgsConstructor;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
-
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.List;
-import java.util.Optional;
+import java.util.*;
 
 @Service
 @RequiredArgsConstructor
@@ -44,7 +41,7 @@ public class UserServiceImpl implements UserService {
             response.setResult(getUserDTO);
             response.setSuccessMessage(UserConstants.USER_CREATED_SUCCESSFULLY);
         } else {
-            response.setErrors(Arrays.asList(UserConstants.USER_IS_ALREADY_EXIST));
+            response.setErrors(List.of(UserConstants.USER_IS_ALREADY_EXIST));
         }
         return response;
     }
@@ -67,6 +64,7 @@ public class UserServiceImpl implements UserService {
         }
 
     }
+
     public List<GetUserReqDto> getAllUsers() {
         try {
             List<GetUserReqDto> userList = new ArrayList<>();
@@ -85,35 +83,45 @@ public class UserServiceImpl implements UserService {
 
     }
 
-    public Optional<UserEntity> userFindByUsername(String name) {
-        NonPaginatedResponse response = new NonPaginatedResponse();
-        return userRepo.findByUsernameAndDeletedEquals(name, Boolean.FALSE);
-    }
+//    public Optional<UserEntity> userFindByUsername(String name) {
+//        NonPaginatedResponse response = new NonPaginatedResponse();
+//        return userRepo.findByUsernameAndDeletedEquals(name, Boolean.FALSE);
+//    }
 
     @Override
     public NonPaginatedResponse deleteUser(Long userId) {
         NonPaginatedResponse response = new NonPaginatedResponse();
+        UserEntity aUser = userRepo.getReferenceById(userId);
+
         try {
-            if(currentUserService.getCurrentUser().getUserId() == userId){
-                response.setErrors(List.of("Can't delete"));
+            if (Objects.equals(currentUserService.getCurrentUser().getUserId(), userId)) {
+                response.setErrors(List.of("Can't delete!"));
                 return response;
             }
-            UserEntity aUser = userRepo.getReferenceById(userId);
+            if (aUser.getRole() == Roles.ADMIN) {
+                response.setErrors(List.of("Admin can not be deleted!"));
+                return response;
+            }
             aUser.setDeleted(true);
             userRepo.save(aUser);
-            response.setSuccessMessage("User Deleted successfully");
+            response.setSuccessMessage("User Deleted successfully!");
         } catch (Exception e) {
             e.printStackTrace();
             throw new RuntimeException();
         }
-return response;
+        return response;
     }
 
     @Override
-    public String updateUser(UserDto userDto) {
+    public NonPaginatedResponse updateUser(UserDto userDto) {
+        NonPaginatedResponse response = new NonPaginatedResponse();
         try {
             Optional<UserEntity> existingUserOptional = userRepo.findById(userDto.getUserId());
             UserEntity aUser = new UserEntity();
+            if(currentUserService.getCurrentUser().getRole().equals(Roles.USER)){
+                response.setErrors(Collections.singletonList("Role User has no privilege to update!"));
+                return response;
+            }
             if (existingUserOptional.isPresent()) {
                 aUser = existingUserOptional.get();
                 aUser.setFirstname(userDto.getFirstname());
@@ -123,19 +131,21 @@ return response;
                 aUser.setGender(userDto.getGender());
                 aUser.setEmail(userDto.getEmail());
                 if (userDto.getConfirmPw() == null && userDto.getPassword() == null) {
-                    throw new RuntimeException("Invalid Password");
+                    //when updating w/d the same password
+                    aUser.setPassword(existingUserOptional.get().getPassword());
                 } else {
+                    //when updating w/d a new password
                     aUser.setPassword(passwordEncoder.encode(userDto.getPassword()));
 //                    aUser.setConfirmPw(passwordEncoder.encode(userDto.getConfirmPw()));
                 }
             }
             userRepo.save(aUser);
-            return "Updated";
+            response.setSuccessMessage("Successfully updated!");
+            return response;
         } catch (Exception e) {
             e.printStackTrace();
             throw new RuntimeException();
         }
-
     }
 
 
